# dev-fingerprinter-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __version__.py  challenge_manager.py  compose.yml  controller.py  pyproject.toml
.github/workflows/: 2.build-publish-python.yml  3.build-publish-docker.yml
examples/miner_commit/: compose.yml
scripts/: bump-version.sh  test_email.py
src/api/: __version__.py
src/api/configs/: challenge.yml
src/api/core/configs/: _main.py  challenge.py
src/api/endpoints/challenge/: dfp.py  job.py  payload.py  router.py  schemas.py  service.py  utils.py
src/api/helpers/: __init__.py  email.py
src/templates/js/: fingerprinter.js
templates/commit/src/: app.py
templates/commit/src/fingerprinter/: fingerprinter.js
templates/compose/: compose.override.dev.yml
templates/configs/: devices.json  devices.json.example
tests/: dfp.py  test_scoring.py
